Fixed comma in package.json

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "passport-jwt": "^4.0.0",
     "should": "^13.2.3",
     "supertest": "^4.0.2",
-    "validator": "^12.2.0"
+    "validator": "^12.2.0",
     "xmlhttprequest": "^1.8.0"
   },
   "homepage": "https://github.com/UFWebApps/React_Template_Repo#readme"
