--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
     "express": "^4.17.1",
+    "fetch": "^1.1.0",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^6.2.1",
