--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "author": "Dakota Rennemann",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chart.js": "^2.9.3",
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -36,6 +38,8 @@
     "nodemon": "^1.18.10",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "react-chartjs-2": "^2.9.0",
+    "semantic-ui-react": "^0.88.2",
     "should": "^13.2.3",
     "supertest": "^4.0.2",
     "validator": "^12.2.0",
