--- a/client/package.json
+++ b/client/package.json
@@ -34,5 +34,9 @@
   "devDependencies": {
     "react-router-dom": "^5.1.2"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": {
+    "/": {
+      "target": "http://localhost:5000"
+    }
+  }
 }
