Fixed proxy again.

--- a/client/package.json
+++ b/client/package.json
@@ -38,5 +38,10 @@
     "/": {
       "target": "http://localhost:5000"
     }
+  },
+  "proxies": {
+    "/": {
+      "origin": "http://localhost:5000"
+    }
   }
 }
