--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
     "validator": "^12.2.0",
     "xmlhttprequest": "^1.8.0"
   },
-  "homepage": "https://github.com/UFWebApps/React_Template_Repo#readme"
+  "homepage": "https://davidmccormack.github.io/codewire/"
 }
 
