--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
+Skip to content
+Search or jump to…
+
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@ryan12900 
+Learn Git and GitHub without any code!
+Using the Hello World guide, you’ll start a branch, write comments, and open a pull request.
+
+
+davidmccormack
+/
+codewire
+Private
+generated from rennemannd/MERN-Heroku-Template
+1
+01
+ Code Issues 0 Pull requests 0 Actions Projects 0 Wiki Security 0 Insights
+codewire/.gitignore
+@davidmccormack davidmccormack Initial commit
+865001b on Feb 21
+56 lines (43 sloc)  1.05 KB
+  
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -54,3 +80,15 @@ yarn-error.log*
 
 # User-specific stuff
 .idea/*
+© 2020 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Help
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
